--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1>Click the Button</h1>
-
+<!-- test -->
     <button id="centerButton"></button>
 
     <script src="script.js"></script>
