--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 <body>
 
     <h1>Click the Button</h1>
-<!-- test -->
+    <!-- test -->
     <button id="centerButton"></button>
+
+    <audio id="vineBoom">
+        <source src="vine.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="cR">
+        <source src="cr.mp3" type="audio/mpeg">
+    </audio>
 
     <script src="script.js"></script>
 </body>
