--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <h1>Click the Button</h1>
-    <!-- test -->
+    <h2>Turn up your volume for best experience</h2>
+
     <button id="centerButton"></button>
 
     <audio id="vineBoom">
@@ -22,6 +23,11 @@
     <audio id="cR">
         <source src="cr.mp3" type="audio/mpeg">
     </audio>
+    <audio id="he">
+        <source src="he.mp3" type="audio/mpeg">
+    </audio>
+
+    <p id="credits"></p>
 
     <script src="script.js"></script>
 </body>
