added new button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <button id="centerButton"></button>
 
+    <button id="sounds"></button>
+
     <audio id="vineBoom">
         <source src="vine.mp3" type="audio/mpeg">
     </audio>
